# algo-trading

./: .gitignore  README.md  pyproject.toml  settings.ini
.github/workflows/: python-app.yml  run-tests.yml
algo_trading/: algorithm.py  settings.py
algo_trading/api_adapters/: polygon_api.py
algo_trading/data_flow/: data_flow.py
algo_trading/tests/: test_algorithm.py
algo_trading/tests/api_adapters/: test_polygon_api.py
algo_trading/tests/data_flow/: test_data_flow.py
