[tool.poetry]
name = "algo-trading"
version = "0.1.0"
description = "A library to interface with backtesting frameworks and live trading platforms."
authors = ["Raymond DeVries"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
python-decouple = "^3.3"
polygon-cache = "^0.1.2"
pre-commit = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.10.0"

[tool.black]
target-version = ["py38"]
include = "app"
line_length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
